--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -16,12 +16,12 @@ jobs:
               - -c
               - set -e
                 cd repo
-                npm test
+                npm run tests
 
 resources:
   - name: repo
     type: git
     icon: github-circle
     source:
-      uri: git@github.com:CranberryYam/conc.git
+      uri: https://github.com/CranberryYam/conc.git
       branch: master
