--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -1,6 +1,7 @@
 jobs:
  - name: test
    plan:
+      - { put: version, params: { bump: patch } }
       - { get: repo, trigger: true }
       - task: test
         config:
@@ -10,17 +11,26 @@ jobs:
             source: { repository: node, tag: "8" }
           inputs: 
             - name: repo
+            - name: version
           run:
             path: /bin/bash
             args:
               - -c
               - |
                 set -e
+                echo "VERSION: $(cat ./version/version)"
                 cd repo
                 npm install
                 npm run tests
 
 resources:
+  - name: version
+    type: semver
+    source: 
+      driver: gcs
+      bucket: leap-artifact-versions
+      key: henry-test-app
+      json_key: ((common-secrets.leap-cluster-admin))
   - name: repo
     type: git
     icon: github-circle
