--- a/pipeline.yaml
+++ b/pipeline.yaml
@@ -3,6 +3,12 @@ jobs:
    plan:
       - { put: version, params: { bump: patch } }
       - { get: repo, trigger: true }
+      - put: test-app-image
+        params:
+          build: ./repo
+          tag_file: ./version/version
+          dockerfile: ./repo/Dockerfile
+        get_params: { skip_download: true }
       - task: test
         config:
           platform: linux
@@ -24,6 +30,12 @@ jobs:
                 npm run tests
 
 resources:
+  - name: test-app-image
+    type: docker-image
+    source:
+      repository: gcr.io/sports-leap-prod/henry-test-app
+      username: _json_key
+      password: ((common-secrets.leap-cluster-admin))
   - name: version
     type: semver
     source: 
